CHATS_SIT/force-app/main/default/objects/T_INDIV_CUST__c.object
<CustomObject>
    <description>Information about children on multiple cases</description>
    <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <defaultValue>&quot;V&quot;</defaultValue>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Custody</relationshipLabel>
        <relationshipName>T_SBSD_INDIV24</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Joint Custody ID external</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <label>Custody</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>IDN_CLIENT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Joint Custody ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custody</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_Beg_Date_LessThan_equal_today</fullName>
        <active>true</active>
        <description>Effective Begin date is less than or equal to today&apos;s date</description>
        <errorConditionFormula>NOT( IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; DTE_BEGIN_EFFV__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Effective Begin date must be less than or equal to today&apos;s date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_End_Date_Less_than_Begin_Date</fullName>
        <active>true</active>
        <description>Effective End Date must be greater than Effective Begin Date.</description>
        <errorConditionFormula>NOT( IDN_CLIENT__r.Is_Peak_Data__c )  &amp;&amp; NOT( IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>INDIV_AGE_GRTR_OR_EQ_19</fullName>
        <active>false</active>
        <description>CHAT-1175: This record may not be appropriate for this individual based on their age</description>
        <errorConditionFormula>NOT( IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; IDN_CLIENT__r.Age__c &gt;= VALUE( $Label.Teen_Parent_Age_Limit )</errorConditionFormula>
        <errorMessage>This record may not be appropriate for this individual based on their age</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Warning_Message_before_saving_the_record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ), OR(IDN_CLIENT__r.Is_Primary_Parent_Caretaker__c,IDN_CLIENT__r.Age__c &gt;= VALUE( $Label.Teen_Parent_Age_Limit ), AND(IDN_CLIENT__r.Age__c &lt; VALUE( $Label.Teen_Parent_Age_Limit ), 
IDN_CLIENT__r.Has_Allowed_Relationship__c)),NOT(Ignore__c))</errorConditionFormula>
        <errorMessage>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case(to continue saving please tick Ignore checkbox)</errorMessage>
    </validationRules>
</CustomObject>