CHATS_SIT/force-app/main/default/objects/T_INDIV_CUST__c/validationRules/Effective_Beg_Date_LessThan_equal_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Beg_Date_LessThan_equal_today</fullName>
    <active>true</active>
    <description>Effective Begin date is less than or equal to today&apos;s date</description>
    <errorConditionFormula>NOT( IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; DTE_BEGIN_EFFV__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Effective Begin date must be less than or equal to today&apos;s date</errorMessage>
</ValidationRule>