CHATS_SIT/force-app/main/default/objects/T_INDIV_CUST__c/validationRules/Effective_End_Date_Less_than_Begin_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_End_Date_Less_than_Begin_Date</fullName>
    <active>true</active>
    <description>Effective End Date must be greater than Effective Begin Date.</description>
    <errorConditionFormula>NOT( IDN_CLIENT__r.Is_Peak_Data__c )  &amp;&amp; NOT( IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
</ValidationRule>