CHATS_SIT/force-app/main/default/objects/T_INDIV_CUST__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>IDN_CLIENT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>