CHATS_SIT/force-app/main/default/objects/T_INDIV_CUST__c/listViews/Joint_Custody_Records.listView-meta.xml
<ListView>
    <fullName>Joint_Custody_Records</fullName>
    <columns>NAME</columns>
    <columns>DTE_END_EFFV__c</columns>
    <columns>DTE_BEGIN_EFFV__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IDN_CLIENT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DTE_END_EFFV__c</field>
        <operation>equals</operation>
    </filters>
    <label>Joint Custody Records</label>
</ListView>